--- a/package.json
+++ b/package.json
@@ -1,36 +1,47 @@
 {
-  "name": "bench-template",
+  "name": "github-action-todos-to-issue",
   "version": "1.0.0",
-  "description": "Template to start a new repository on the bench",
-  "main": "index.js",
-  "type": "module",
+  "description": "It scans your source code looking for TODO comments and creates an issue with them",
+  "main": "dist/index.js",
+  "type": "commonjs",
   "scripts": {
     "lint": "eslint .",
-    "test": "echo \"Error: no test specified\" && exit 0",
-    "prepare": "husky install"
+    "test": "jest",
+    "prepare": "husky install",
+    "build": "ncc build src --license licenses.txt"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/nearform/bench-template.git"
+    "url": "git+https://github.com/nearform/github-action-todos-to-issue.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/nearform/bench-template/issues"
+    "url": "https://github.com/nearform/github-action-todos-to-issue/issues"
   },
-  "homepage": "https://github.com/nearform/bench-template#readme",
+  "homepage": "https://github.com/nearform/github-action-todos-to-issue#readme",
   "devDependencies": {
+    "@babel/preset-env": "^7.18.6",
     "@commitlint/cli": "^17.0.3",
     "@commitlint/config-conventional": "^17.0.3",
+    "@types/jest": "^28.1.5",
+    "@vercel/ncc": "^0.34.0",
     "eslint": "^8.19.0",
     "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-jest": "^26.5.3",
     "eslint-plugin-prettier": "^4.2.1",
     "husky": "^8.0.1",
+    "jest": "^28.1.2",
     "lint-staged": "^13.0.3",
     "prettier": "^2.7.1"
   },
   "lint-staged": {
     "*.{js,jsx}": "eslint --cache --fix"
+  },
+  "dependencies": {
+    "@actions/core": "^1.9.0",
+    "@actions/github": "^5.0.3",
+    "app-root-path": "^3.0.0"
   }
 }
