feat: add simple issue creation

--- a/action.yml
+++ b/action.yml
@@ -8,6 +8,9 @@ inputs:
   github-token:
     description: 'GitHub token'
     required: true
+  current-branch:
+    description: 'Current repository branch'
+    require: true
   pattern:
     description: 'Pattern to match'
     required: false
