--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
   "dependencies": {
     "@actions/core": "^1.9.0",
     "@actions/github": "^5.0.3",
-    "app-root-path": "^3.0.0"
+    "app-root-path": "^3.0.0",
+    "handlebars": "^4.7.7"
   }
 }
