--- a/action.yml
+++ b/action.yml
@@ -8,7 +8,10 @@ inputs:
   github-token:
     description: 'GitHub token'
     required: true
-  current-branch:
+  github-workspace:
+    description: 'GitHub workspace directory'
+    required: true
+  github-branch:
     description: 'Current repository branch'
     require: true
   pattern:
