--- a/.github/workflows/notify-release.yml
+++ b/.github/workflows/notify-release.yml
@@ -1,17 +1,13 @@
 name: notify-release
 on:
   workflow_dispatch:
-    branches:
-      - main
   schedule:
     - cron: '30 8 * * *'
 jobs:
   setup:
     runs-on: ubuntu-latest
     steps:
-      - name: Check if there's a release pending
-        id: notify
-        uses: nearform/github-action-notify-release@main
+      - name: Notify release
+        uses: nearform/github-action-notify-release@v1
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
-          stale-days: 0
