--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,14 +20,15 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Node.js runtime on build
-        uses: actions/setup-node@v2
+        uses: actions/setup-node@v3
         with:
           node-version: 16
 
-      - uses: nearform/optic-release-automation-action@v2
+      - uses: nearform/optic-release-automation-action@v3
         with:
           github-token: ${{ secrets.github_token }}
           semver: ${{ github.event.inputs.semver }}
+          commit-message: 'chore: release {version}'
           sync-semver-tags: true
           build-command: |
             echo 'installing husky hooks..'
