--- a/action.yml
+++ b/action.yml
@@ -12,22 +12,13 @@ inputs:
     description: 'Current repository branch'
     require: true
   pattern:
-    description: 'Pattern to match'
+    description: 'Pattern to match comma separated'
     required: false
     default: 'TODO:,// TODO'
   scan-dir:
     description: 'Scan directory'
     required: false
     default: '.'
-  exclude-dirs:
-    description: 'Directories to exclude during the scan'
-    required: false
-    default: 'node_modules,.github'
-  scan-extensions:
-    description: 'Specify the files extensions to scan'
-    required: false
-    default: '.js,.ts,.cjs,.mjs'
-
 
 runs:
   using: 'node16'
