--- a/.eslintrc
+++ b/.eslintrc
@@ -1,13 +1,11 @@
 {
   "extends": [
     "eslint:recommended",
-    "plugin:prettier/recommended",
-    "plugin:jest/recommended"
+    "plugin:prettier/recommended"
   ],
   "env": {
     "node": true,
-    "es2021": true,
-    "jest/globals": true
+    "es2021": true
   },
   "parserOptions": {
     "ecmaVersion": 2021,
