--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "commonjs",
   "scripts": {
     "lint": "eslint .",
-    "test": "jest",
+    "test": "tap",
     "prepare": "husky install",
     "build": "ncc build src --license licenses.txt"
   },
@@ -25,16 +25,15 @@
     "@babel/preset-env": "^7.18.6",
     "@commitlint/cli": "^17.0.3",
     "@commitlint/config-conventional": "^17.0.3",
-    "@types/jest": "^28.1.5",
     "@vercel/ncc": "^0.34.0",
     "eslint": "^8.19.0",
     "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-jest": "^26.5.3",
     "eslint-plugin-prettier": "^4.2.1",
     "husky": "^8.0.1",
-    "jest": "^28.1.2",
     "lint-staged": "^13.0.3",
-    "prettier": "^2.7.1"
+    "prettier": "^2.7.1",
+    "sinon": "^14.0.0",
+    "tap": "^16.3.0"
   },
   "lint-staged": {
     "*.{js,jsx}": "eslint --cache --fix"
