--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
   },
   "homepage": "https://github.com/nearform/github-action-todos-to-issue#readme",
   "devDependencies": {
-    "@babel/preset-env": "^7.18.6",
     "@commitlint/cli": "^17.0.3",
     "@commitlint/config-conventional": "^17.0.3",
     "@vercel/ncc": "^0.34.0",
@@ -41,6 +40,6 @@
   "dependencies": {
     "@actions/core": "^1.9.0",
     "@actions/github": "^5.0.3",
-    "liquidjs": "^9.39.1"
+    "ejs": "^3.1.8"
   }
 }
