--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   "dependencies": {
     "@actions/core": "^1.9.0",
     "@actions/github": "^5.0.3",
-    "ejs": "^3.1.8"
+    "ejs": "^3.1.8",
+    "encoding": "^0.1.13"
   }
 }
