feat: add logic for scanning the source code looking for a specific TODO pattern (#1)
* feat: wip

Work In Progress commit

* feat: update package json to commonjs

* feat: add simple issue creation

* feat: add buildIssueBody sample function

* feat: add debug log

* feat: add workspace dir

* feat: add debug logs

* feat: update grep command

* feat: add cd to dir and then grep

* feat: add debug log

* feat: wip

* feat: replace partially grep with find

* feat: wip

* feat: new file matching pattern command

* feat: add missing quote

* feat: wip

* feat: add debug log

* feat: add debug log

* feat: add debug log

* feat: removed debug logs

* feat: add multiple patterns

* feat: wip add handlebars support

* feat: improve issue template

* feat: update issue request

* feat: add unit tests

* feat: update log

* feat: add sample file to not matching dir

* feat: fixed test

* feat: add again notify-release workflow

* feat: add readme file

* feat: wip refactor

* feat: wip refactor

replace jest with tap and other refactoring

* feat: wip cjs to esm

* feat: wip update handlebars

* feat: wip handlebars test

* feat: wip restore handlebars

* feat: wip hb

* feat: add unit tests with node-tap and liquidjs

* feat: add ejs support

* feat: delete issue.template.hbs from dist

* feat: add check-require.sh

* feat: remove github-branch and replace plan with end

* feat: remove t.end and add async in tests

* feat: regenerate package-lock and update eslint version

--- a/package.json
+++ b/package.json
@@ -1,36 +1,46 @@
 {
-  "name": "bench-template",
+  "name": "github-action-todos-to-issue",
   "version": "1.0.0",
-  "description": "Template to start a new repository on the bench",
-  "main": "index.js",
+  "description": "It scans your source code looking for TODO comments and creates an issue with them",
+  "main": "dist/index.js",
   "type": "module",
   "scripts": {
     "lint": "eslint .",
-    "test": "echo \"Error: no test specified\" && exit 0",
-    "prepare": "husky install"
+    "test": "tap --node-arg=\"--loader=esmock\"",
+    "prepare": "husky install",
+    "build": "ncc build src --license licenses.txt"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/nearform/bench-template.git"
+    "url": "git+https://github.com/nearform/github-action-todos-to-issue.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/nearform/bench-template/issues"
+    "url": "https://github.com/nearform/github-action-todos-to-issue/issues"
   },
-  "homepage": "https://github.com/nearform/bench-template#readme",
+  "homepage": "https://github.com/nearform/github-action-todos-to-issue#readme",
   "devDependencies": {
     "@commitlint/cli": "^17.0.3",
     "@commitlint/config-conventional": "^17.0.3",
+    "@vercel/ncc": "^0.34.0",
     "eslint": "^8.20.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
+    "esmock": "^1.7.8",
     "husky": "^8.0.1",
     "lint-staged": "^13.0.3",
-    "prettier": "^2.7.1"
+    "prettier": "^2.7.1",
+    "tap": "^16.3.0"
   },
   "lint-staged": {
     "*.{js,jsx}": "eslint --cache --fix"
+  },
+  "dependencies": {
+    "@actions/core": "^1.9.0",
+    "@actions/github": "^5.0.3",
+    "ejs": "^3.1.8",
+    "encoding": "^0.1.13"
   }
 }
