--- a/.github/workflows/notify-release.yml
+++ b/.github/workflows/notify-release.yml
@@ -1,14 +1,13 @@
-name: Notify release
-
+name: notify-release
 on:
   workflow_dispatch:
   schedule:
     - cron: '30 8 * * *'
-
 jobs:
   setup:
     runs-on: ubuntu-latest
     steps:
-      - uses: nearform/github-action-notify-release@v1
+      - name: Notify release
+        uses: nearform/github-action-notify-release@v1
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
