--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,4 +1,4 @@
-name: release
+name: Create a release
 
 on:
   workflow_dispatch:
@@ -19,9 +19,17 @@ jobs:
   release:
     runs-on: ubuntu-latest
     steps:
+      - name: Node.js runtime on build
+        uses: actions/setup-node@v3
+        with:
+          node-version: 16
+
       - uses: nearform/optic-release-automation-action@v3
         with:
           github-token: ${{ secrets.github_token }}
           semver: ${{ github.event.inputs.semver }}
           commit-message: 'chore: release {version}'
-          build-command: npm ci
+          sync-semver-tags: true
+          build-command: |
+            echo 'installing husky hooks..'
+            npm ci
