--- a/action.yml
+++ b/action.yml
@@ -7,7 +7,8 @@ description: It scans your source code looking for TODO comments and creates an 
 inputs:
   github-token:
     description: 'GitHub token'
-    required: true
+    required: false
+    default: ${{ github.token }}
   pattern:
     description: 'Pattern to match comma separated'
     required: false
