--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,5 +1,4 @@
 name: Create a release
-
 on:
   workflow_dispatch:
     inputs:
@@ -19,14 +18,14 @@ jobs:
   release:
     runs-on: ubuntu-latest
     permissions:
+      contents: write
+      issues: write
       pull-requests: write
-      contents: write    
     steps:
       - name: Node.js runtime on build
         uses: actions/setup-node@v3
         with:
           node-version: 16
-
       - uses: nearform-actions/optic-release-automation-action@v4
         with:
           semver: ${{ github.event.inputs.semver }}
