--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Node.js runtime on build
         uses: actions/setup-node@v4
         with:
-          node-version: 16
+          node-version-file: .nvmrc
       - uses: nearform-actions/optic-release-automation-action@v4
         with:
           semver: ${{ github.event.inputs.semver }}
